# portrait_photography

./: README.md
portrait_bokeh/tools/monocular_depth_estimation/MiDaS/: inference.py  inference_dynamic.py  inference_dynamic_input.py  onnx_result.npy
portrait_bokeh/tools/monocular_depth_estimation/MiDaS/Python/: inference.py  inference_better.py  onnx_result.npy
portrait_bokeh/tools/portrait_matting/MODNet/MNN/: run.sh  xmake.lua
portrait_bokeh/tools/portrait_matting/MODNet/MNN/src/: inference.cpp
portrait_bokeh/tools/portrait_matting/MODNet/Python/: inference.py  inference_dynamic.py
portrait_bokeh/tools/portrait_matting/MODNet/ncnn/: CMakeLists.txt  MODNet.param  run.sh  xmake.lua
portrait_bokeh/tools/portrait_matting/MODNet/ncnn/src/: inference.cpp
